paper-listbox-background-color
# paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5

--- a/themes/zeno-themes.yaml
+++ b/themes/zeno-themes.yaml
@@ -208,7 +208,7 @@ Zeno Dark Rose:
   ### Cards colors
   ha-card-background: "#2A282D"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -443,7 +443,7 @@ Zeno Dark Purple:
   ### Cards colors
   ha-card-background: "#2A282D"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -672,7 +672,7 @@ Zeno Dark Blue:
   ### Cards colors
   ha-card-background: "#2A282D"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -901,7 +901,7 @@ Zeno Dark Aqua:
   ### Cards colors
   ha-card-background: "#2A282D"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -1130,7 +1130,7 @@ Zeno Dark Green:
   ### Cards colors
   ha-card-background: "#2A282D"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -1359,7 +1359,7 @@ Zeno Dark Yellow:
   ### Cards colors
   ha-card-background: "#2A282D"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -1589,7 +1589,7 @@ Zeno Dark Orange:
   ### Cards colors
   ha-card-background: "#2A282D"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -1818,7 +1818,7 @@ Zeno Dark Coral:
   ### Cards colors
   ha-card-background: "#2A282D"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -2047,7 +2047,7 @@ Zeno Dark Pink:
   ### Cards colors
   ha-card-background: "#2A282D"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -2276,7 +2276,7 @@ Zeno Dark Gray:
   ### Cards colors 
   ha-card-background: "#2A282D"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -2509,7 +2509,7 @@ Zeno Light Rose:
   ### Cards colors
   ha-card-background: "#ffffff"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -2738,7 +2738,7 @@ Zeno Light Purple:
   ### Cards colors
   ha-card-background: "#ffffff"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -2967,7 +2967,7 @@ Zeno Light Blue:
   ### Cards colors
   ha-card-background: "#ffffff"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -3196,7 +3196,7 @@ Zeno Light Aqua:
   ### Cards colors
   ha-card-background: "#ffffff"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -3425,7 +3425,7 @@ Zeno Light Green:
   ### Cards colors
   ha-card-background: "#ffffff"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -3654,7 +3654,7 @@ Zeno Light Yellow:
   ### Cards colors
   ha-card-background: "#ffffff"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -3883,7 +3883,7 @@ Zeno Light Orange:
   ### Cards colors
   ha-card-background: "#ffffff"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -4112,7 +4112,7 @@ Zeno Light Coral:
   ### Cards colors
   ha-card-background: "#ffffff"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -4341,7 +4341,7 @@ Zeno Light Pink:
   ### Cards colors
   ha-card-background: "#ffffff"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
@@ -4570,7 +4570,7 @@ Zeno Light Gray:
   ### Cards colors
   ha-card-background: "#ffffff"
   paper-card-background-color: var(--ha-card-background)
-  paper-listbox-background-color: var(--divider-color)
+    # paper-listbox-background-color: var(--divider-color) # Eliminat 2025.5
   ### Toggle button colors
   paper-toggle-button-checked-button-color: var(--primary-color)
   paper-toggle-button-checked-bar-color: var(--light-primary-color)
