--- a/themes/zeno-themes.yaml
+++ b/themes/zeno-themes.yaml
@@ -85,8 +85,9 @@ Zeno Dark Rose:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -337,8 +338,9 @@ Zeno Dark Purple:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -583,8 +585,9 @@ Zeno Dark Blue:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -829,8 +832,9 @@ Zeno Dark Aqua:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -1075,8 +1079,9 @@ Zeno Dark Green:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -1321,8 +1326,9 @@ Zeno Dark Yellow:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -1568,8 +1574,9 @@ Zeno Dark Orange:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -1814,8 +1821,9 @@ Zeno Dark Coral:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -2060,8 +2068,9 @@ Zeno Dark Pink:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -2306,8 +2315,9 @@ Zeno Dark Gray:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -2556,8 +2566,9 @@ Zeno Light Rose:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -2802,8 +2813,9 @@ Zeno Light Purple:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -3048,8 +3060,9 @@ Zeno Light Blue:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -3294,8 +3307,9 @@ Zeno Light Aqua:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -3540,8 +3554,9 @@ Zeno Light Green:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -3786,8 +3801,9 @@ Zeno Light Yellow:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -4032,8 +4048,9 @@ Zeno Light Orange:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -4278,8 +4295,9 @@ Zeno Light Coral:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -4524,8 +4542,9 @@ Zeno Light Pink:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
@@ -4770,8 +4789,9 @@ Zeno Light Gray:
   ha-color-on-disabled-normal: var(--state-inactive-color)
   # ha-color-on-disabled-quiet: var(--divider-color) #var(--disabled-quiet)
   # ha-color-on-disabled-loud: var(--divider-color) #var(--disabled-loud)
+  ha-color-fill-primary-normal-hover: var(--quiet-color)
   # wa-color-brand-fill-loud: var(--primary-color)
-  # wa-color-brand-fill-normal: var(--primary-color)
+  wa-color-brand-fill-normal: var(--primary-text-color)
   wa-color-brand-fill-quiet: var(--quiet-color)
   wa-color-brand-on-quiet: var(--primary-color)
   ### Sidebar colors
